--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,6 @@ matrix:
   include:
     - rvm: 1.8.7
       gemfile: gemfiles/rails-3.2.gemfile
+  exclude:
+    - rvm: 1.9.3
+      gemfile: gemfiles/rails-master.gemfile
